--- a/MduiBlazor.Shared/Pages/LayoutPage.razor
+++ b/MduiBlazor.Shared/Pages/LayoutPage.razor
@@ -31,46 +31,46 @@
      <MduiText id="appbar" UseMduiTypo Typo="@Typo.subheading"><b>应用栏</b></MduiText>
      <p>带有工具栏的应用栏。</p>
      <p class="mdui-typo">需要设置组件<code>MduiLayout</code>参数<code>AppbarWithToolbar="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Component="@typeof(LayoutWithToolbar)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithToolbar)" />
 
      <p>带有 Tab 选项卡的应用栏。</p>
      <p class="mdui-typo">需要设置组件<code>MduiLayout</code>参数<code>AppbarWithTab="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Component="@typeof(LayoutWithTab)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithTab)" />
      <p>Tab 选项卡同时含有标题和图标的应用栏。</p>
      <p class="mdui-typo">需要设置组件<code>MduiLayout</code>参数<code>AppbarWithTabLarger="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Component="@typeof(LayoutWithTabLarger)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithTabLarger)" />
 
      <p>同时有工具栏和 Tab 选项卡的应用栏。</p>
      <p class="mdui-typo">需要同时设置组件<code>MduiLayout</code>参数<code>AppbarWithToolbar="true"</code>和<code>AppbarWithTab="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Component="@typeof(LayoutWithToolbarAndTab)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithToolbarAndTab)" />
 
      <p>透明背景应用栏。</p>
      <p class="mdui-typo">设置参数<code>Shadow="0"</code>取消应用栏的阴影。</p>
-     <ExampleSection Component="@typeof(LayoutWithTransparentAppbar)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithTransparentAppbar)" />
 
      <MduiText id="drawer" UseMduiTypo Typo="@Typo.subheading"><b>抽屉式导航</b></MduiText>
      <p>左侧抽屉式导航。</p>
-     <ExampleSection Component="@typeof(LayoutWithDrawer)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithDrawer)" />
 
      <p>右侧抽屉式导航。</p>
      <p class="mdui-typo">设置组件<code>MduiDrawer</code>参数<code>RightSide="true"</code>。</p>
-     <ExampleSection Component="@typeof(LayoutWithRightDrawer)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithRightDrawer)" />
 
      <p>Persistent抽屉式导航。</p>
      <p class="mdui-typo">设置组件<code>MduiDrawer</code>参数<code>Persistent="true"</code>。</p>
-     <ExampleSection Component="@typeof(LayoutWithPersistentDrawer)" />
+     <ExampleSection FixCode Component="@typeof(LayoutWithPersistentDrawer)" />
 
      <MduiText id="fullLayout" UseMduiTypo Typo="@Typo.subheading"><b>完整布局示例</b></MduiText>
      <p>这是一个完整的布局示例。</p>
-     <ExampleSection Component="@typeof(FullLayout)" />
+     <ExampleSection FixCode Component="@typeof(FullLayout)" />
 
      <p>另一个完整的布局示例。</p>
      <p class="mdui-typo">需要设置组件<code>MduiDrawer</code>参数<code>Inset="true"</code>，以留出应用栏高度。</p>
-     <ExampleSection Component="@typeof(FullLayout2)" />
+     <ExampleSection FixCode Component="@typeof(FullLayout2)" />
 
      <p>左右结构的布局示例。</p>
      <p class="mdui-typo">需要设置组件<code>MduiAppbar</code>参数<code>Inset="true"</code>，以留出抽屉导航栏宽度。</p>
-     <ExampleSection Component="@typeof(FullLayout3)" />
+     <ExampleSection FixCode Component="@typeof(FullLayout3)" />
 
      <p class="mdui-typo">
          另外可以通过设置<code>MduiAppbar</code>和<code>MduiDrawer</code>组件参数<code>Fixed="true"</code>使应用栏和抽屉式导航栏分别固定在浏览器的顶部和侧边。
