--- a/MduiBlazor.Shared/Pages/MediaPage.razor
+++ b/MduiBlazor.Shared/Pages/MediaPage.razor
@@ -29,15 +29,15 @@
 
     <MduiText id="fluidimg" Typo="@Typo.subheading">响应式</MduiText>
     <p class="mdui-typo">在<code>MduiImage</code>组件设置<code>Fluid</code>参数为<code>true</code>可以使图片自适应它的父元素的宽度。</p>
-    <ExampleSection Component="@typeof(FluidImage)" />
+    <ExampleSection FixCode Component="@typeof(FluidImage)" />
 
     <MduiText id="roundedimg" Typo="@Typo.subheading">圆角图片</MduiText>
     <p class="mdui-typo">在<code>MduiImage</code>组件设置<code>Rounded</code>参数为<code>true</code>可以使图片具有圆角。</p>
-    <ExampleSection Component="@typeof(RoundedImage)" />
+    <ExampleSection FixCode Component="@typeof(RoundedImage)" />
 
     <MduiText id="circleimg" Typo="@Typo.subheading">圆形图片</MduiText>
     <p class="mdui-typo">在<code>MduiImage</code>组件设置<code>Circle</code>参数为<code>true</code>可以使图片变成圆形。</p>
-    <ExampleSection Component="@typeof(CircleImage)" />
+    <ExampleSection FixCode Component="@typeof(CircleImage)" />
 </div>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -49,11 +49,11 @@
 
     <MduiText id="iframevideo" Typo="@Typo.subheading">响应式嵌入式视频</MduiText>
     <p class="mdui-typo">在嵌入式视频上嵌套<code>MduiVideoContainer</code>组件可以使视频自适应父元素的宽度。</p>
-    <ExampleSection Component="@typeof(IFrameVideo)" />
+    <ExampleSection FixCode Component="@typeof(IFrameVideo)" />
 
     <MduiText id="h5video" Typo="@Typo.subheading">响应式HTML5视频</MduiText>
     <p class="mdui-typo">在<code>video</code>标签上嵌套<code>MduiVideoContainer</code>组件可以使视频自适应父元素的宽度。</p>
-    <ExampleSection Component="@typeof(Html5Video)" />
+    <ExampleSection FixCode Component="@typeof(Html5Video)" />
 </div>
 
 <MduiDivider Class="mdui-m-y-5" />
