--- a/MduiBlazor.Shared/Pages/TypoPage.razor
+++ b/MduiBlazor.Shared/Pages/TypoPage.razor
@@ -29,10 +29,10 @@
     </h2>
 
     <p class="mdui-typo">下面是一些基本的排版样式：</p>
-    <ExampleSection Component="@typeof(SimpleTypo)" />
+    <ExampleSection FixCode Component="@typeof(SimpleTypo)" />
 
     <p class="mdui-typo">在上面的组件设置<code>Opacity</code>参数为<code>true</code>即可使这些样式拥有适当的不透明度：</p>
-    <ExampleSection Component="@typeof(OpacityTypo)" />
+    <ExampleSection FixCode Component="@typeof(OpacityTypo)" />
 </div>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -46,28 +46,28 @@
     </p>
 
     <MduiText id="title" Typo="@Typo.subheading"><b>标题</b></MduiText>
-    <ExampleSection Component="@typeof(TitleTypo)" />
+    <ExampleSection FixCode Component="@typeof(TitleTypo)" />
 
     <p class="mdui-typo">在标题内还可以包含<code>small</code>标签来标记副标题。</p>
-    <ExampleSection Component="@typeof(SubtitleTypo)" />
+    <ExampleSection FixCode Component="@typeof(SubtitleTypo)" />
 
     <MduiText id="inline" Typo="@Typo.subheading"><b>内联文本样式</b></MduiText>
-    <ExampleSection Component="@typeof(InlineTypo)" />
+    <ExampleSection FixCode Component="@typeof(InlineTypo)" />
 
     <MduiText id="divider" Typo="@Typo.subheading"><b>水平分割线</b></MduiText>
-    <ExampleSection Component="@typeof(DividerTypo)" />
+    <ExampleSection FixCode Component="@typeof(DividerTypo)" />
 
     <MduiText id="blockquote" Typo="@Typo.subheading"><b>引用</b></MduiText>
-    <ExampleSection Component="@typeof(BlockquoteTypo)" />
+    <ExampleSection FixCode Component="@typeof(BlockquoteTypo)" />
 
     <MduiText id="code" Typo="@Typo.subheading"><b>代码块</b></MduiText>
-    <ExampleSection Component="@typeof(CodeTypo)" />
+    <ExampleSection FixCode Component="@typeof(CodeTypo)" />
 
     <MduiText id="ul" Typo="@Typo.subheading"><b>无序列表</b></MduiText>
-    <ExampleSection Component="@typeof(UlTypo)" />
+    <ExampleSection FixCode Component="@typeof(UlTypo)" />
 
     <MduiText id="ol" Typo="@Typo.subheading"><b>有序列表</b></MduiText>
-    <ExampleSection Component="@typeof(OlTypo)" />
+    <ExampleSection FixCode Component="@typeof(OlTypo)" />
 
     <MduiText id="article" Typo="@Typo.subheading"><b>文章排版示例</b></MduiText>
     <p class="mdui-typo">
