--- a/MduiBlazor.Shared/Pages/ClassesPage.razor
+++ b/MduiBlazor.Shared/Pages/ClassesPage.razor
@@ -76,7 +76,7 @@
         </ul>
     </MduiText>
     <div class="example-float">
-        <ExampleSection Component="@typeof(FloatClass)" />
+        <ExampleSection FixCode Component="@typeof(FloatClass)" />
     </div>
 
     <MduiDivider Class="mdui-m-y-5" />
@@ -86,7 +86,7 @@
     </h2>
 
     <p class="mdui-typo">为任意元素添加类<code>.mdui-center</code>即可使其水平居中。</p>
-    <ExampleSection Component="@typeof(CenterClass)" />
+    <ExampleSection FixCode Component="@typeof(CenterClass)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -95,7 +95,7 @@
     </h2>
 
     <p class="mdui-typo">为任意元素添加类<code>.mdui-valign</code>即可使该元素中的子元素垂直居中。</p>
-    <ExampleSection Component="@typeof(ValignClass)" />
+    <ExampleSection FixCode Component="@typeof(ValignClass)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -110,7 +110,7 @@
             <li><code>.mdui-text-right</code>使文本右对齐。</li>
         </ul>
     </MduiText>
-    <ExampleSection Component="@typeof(TextAlignClass)" />
+    <ExampleSection FixCode Component="@typeof(TextAlignClass)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -125,7 +125,7 @@
             <li><code>.mdui-text-capitalize</code>把文本转为单词的首字母大写。</li>
         </ul>
     </MduiText>
-    <ExampleSection Component="@typeof(LowerUpperCaseClass)" />
+    <ExampleSection FixCode Component="@typeof(LowerUpperCaseClass)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -134,7 +134,7 @@
     </h2>
 
     <p class="mdui-typo"><code>.mdui-text-truncate</code>可以在文本长度超出限制时，自动截断，并用省略号代替。</p>
-    <ExampleSection Component="@typeof(TextTruncateClass)" />
+    <ExampleSection FixCode Component="@typeof(TextTruncateClass)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -143,7 +143,7 @@
     </h2>
 
     <p class="mdui-typo">为父元素添加<code>.mdui-clearfix</code>类可以清除浮动。</p>
-    <ExampleSection Component="@typeof(ClearfixClass)" />
+    <ExampleSection FixCode Component="@typeof(ClearfixClass)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -397,7 +397,7 @@
         <MduiText Typo="@Typo.subheading"><b>鼠标悬浮时加深阴影</b></MduiText>
     </div>
     <p class="mdui-typo">在任何元素上添加类<code>.mdui-hoverable</code>，就能在鼠标悬浮时使阴影加深。</p>
-    <ExampleSection Component="@typeof(SimpleCard)" />
+    <ExampleSection FixCode Component="@typeof(SimpleCard)" />
 
     <MduiDivider Class="mdui-m-y-5" />
 
@@ -421,15 +421,15 @@
     <div class="mdui-m-t-4">
         <MduiText Typo="@Typo.subheading"><b>涟漪效果示例</b></MduiText>
     </div>
-    <ExampleSection Component="@typeof(ComponentRipple)" />
-    <ExampleSection Component="@typeof(ImageRipple)" />
+    <ExampleSection FixCode Component="@typeof(ComponentRipple)" />
+    <ExampleSection FixCode Component="@typeof(ImageRipple)" />
 
     <div class="mdui-m-t-4">
         <MduiText Typo="@Typo.subheading"><b>指定涟漪颜色</b></MduiText>
     </div>
     <p class="mdui-typo">默认的涟漪为深色背景，当通过<code>.mdui-color-[color]</code>指定了背景色、或在深色主题下时，涟漪默认为白色。</p>
     <p class="mdui-typo">可通过添加类<code>.mdui-ripple-[color]</code>来指定涟漪颜色。</p>
-    <ExampleSection Component="@typeof(ColorRipple)" />
+    <ExampleSection FixCode Component="@typeof(ColorRipple)" />
 </div>
 
 @code {
