--- a/MduiBlazor.Shared/Pages/IconDemoDialog.razor
+++ b/MduiBlazor.Shared/Pages/IconDemoDialog.razor
@@ -1,6 +1,6 @@
 <MduiDialog Options="@(new DialogOptions{Modal=true})">
     <MduiIcon Icon="@IconName" />
-    <CodeSnippet Style="border-radius: 12px;">@($"<MduiIcon Icon=\"{IconName}\"") /></CodeSnippet>
+    <ExampleSection CodeContents="@($"<MduiIcon Icon=\"{IconName}\" />")" />
 </MduiDialog>
 
 @code {
